[package]
name = "rust_socks_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.0"
rustls = "0.23.0"
rustls-pemfile = "2.1.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
